--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: ping
-Title: What the package does (one line)
-Version: 0.1
-Authors@R: "First Last <first.last@example.com> [aut, cre]"
-Description: What the package does (one paragraph)
-Depends: R (>= 3.1.1)
-License: What license is it under?
+Title: Check if a remote computer is up
+Version: 1.0.0
+Authors@R: "Gabor Csardi <csardi.gabor@gmail.com> [aut,cre]"
+Description: Check if a remote computer is up. It can either
+    just call the system ping command, or check a specified
+    TCP port.
+License: MIT + file LICENSE
 LazyData: true
+URL: https://github.com/gaborcsardi/ping
+BugReports: https://github.com/gaborcsardi/ping/issues
