--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/gaborcsardi/ping
 BugReports: https://github.com/gaborcsardi/ping/issues
+Suggests: testthat
