--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,5 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/gaborcsardi/ping
 BugReports: https://github.com/gaborcsardi/ping/issues
-Suggests: testthat
+Suggests:
+    testthat
