--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ping
-Title: Check if a remote computer is up
+Title: Check If a Remote Computer is Up
 Version: 1.0.0
 Authors@R: "Gabor Csardi <csardi.gabor@gmail.com> [aut,cre]"
 Description: Check if a remote computer is up. It can either
