--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: ping
+Package: pingr
 Title: Check If a Remote Computer is Up
 Version: 1.0.0
 Authors@R: "Gabor Csardi <csardi.gabor@gmail.com> [aut,cre]"
@@ -7,7 +7,7 @@ Description: Check if a remote computer is up. It can either
     TCP port.
 License: MIT + file LICENSE
 LazyData: true
-URL: https://github.com/gaborcsardi/ping
-BugReports: https://github.com/gaborcsardi/ping/issues
+URL: https://github.com/gaborcsardi/pingr
+BugReports: https://github.com/gaborcsardi/pingr/issues
 Suggests:
     testthat
