--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ URL: https://github.com/gaborcsardi/pingr
 BugReports: https://github.com/gaborcsardi/pingr/issues
 Suggests:
     testthat
+RoxygenNote: 6.0.1
