Accents in DESCRIPTION & LICENSE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pingr
 Title: Check If a Remote Computer is Up
 Version: 1.1.1
-Authors@R: "Gabor Csardi <csardi.gabor@gmail.com> [aut,cre]"
+Authors@R: "Gábor Csárdi <csardi.gabor@gmail.com> [aut,cre]"
 Description: Check if a remote computer is up. It can either
     just call the system ping command, or check a specified
     TCP port.
@@ -12,3 +12,4 @@ BugReports: https://github.com/gaborcsardi/pingr/issues
 Suggests:
     testthat
 RoxygenNote: 6.0.1
+Encoding: UTF-8
