--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,6 @@ URL: https://github.com/r-lib/pingr#readme
 BugReports: https://github.com/r-lib/pingr/issues
 Suggests:
     testthat
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.99.9001
+Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
