--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,14 @@
-# Sample .travis.yml for R projects from https://github.com/craigcitro/r-travis
+language: r
+sudo: false
+cache: packages
 
-language: c
+r:
+ - 3.2
+ - 3.3
+ - 3.4
+ - oldrel
+ - release
+ - devel
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh install_deps
-
-script: ./travis-tool.sh run_tests
-
-on_failure:
-  - ./travis-tool.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+after_success:
+  - test $TRAVIS_R_VERSION_STRING = "release" && Rscript -e 'covr::codecov()'
