--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ LazyData: true
 URL: https://github.com/r-lib/pingr#readme
 BugReports: https://github.com/r-lib/pingr/issues
 Suggests:
+    covr,
     testthat
 RoxygenNote: 6.1.99.9001
 Roxygen: list(markdown = TRUE)
