--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(is_online)
 export(is_up)
 export(ping)
 export(ping_port)
+importFrom(processx,run)
 useDynLib(pingr, .registration = TRUE, .fixes = "C_")
