Trying to fix C calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,4 @@ export(is_up)
 export(ping)
 export(ping_port)
 importFrom(processx,run)
-useDynLib(pingr, .registration = TRUE, .fixes = "C_")
+useDynLib(pingr, .registration = TRUE)
