--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Suggests:
     covr,
     testthat
 Imports:
-    processx
+    processx,
+    utils
 RoxygenNote: 6.1.99.9001
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
