--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 2.0.0.9000
 Authors@R: c(
     person(given = "Gábor", family = "Csárdi", role = c("aut", "cre"),
            email = "csardi.gabor@gmail.com"),
-    person("RStudio", role = c("cph", "fnd"))
+    person("RStudio", role = c("cph", "fnd")))
 Description: Check if a remote computer is up. It can either
     just call the system ping command, or check a specified
     TCP port.
