--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Check if a remote computer is up. It can either
     just call the system ping command, or check a specified
     TCP port.
 License: MIT + file LICENSE
-URL: https://github.com/r-lib/pingr#readme
+URL: https://github.com/r-lib/pingr#readme, http://r-lib.github.io/pingr/
 BugReports: https://github.com/r-lib/pingr/issues
 Suggests:
     covr,
@@ -18,3 +18,4 @@ Imports:
 RoxygenNote: 7.1.0.9000
 Roxygen: list(packages = "roxygenlabs", markdown = TRUE)
 Encoding: UTF-8
+Config/Needs/website: tidyverse/tidytemplate
