--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Description: Check if a remote computer is up. It can either
     just call the system ping command, or check a specified
     TCP port.
 License: MIT + file LICENSE
-URL: https://github.com/r-lib/pingr#readme, http://r-lib.github.io/pingr/
+URL: https://github.com/r-lib/pingr#readme, https://r-lib.github.io/pingr/
 BugReports: https://github.com/r-lib/pingr/issues
 Suggests:
     covr,
