--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ URL: https://github.com/r-lib/pingr#readme, https://r-lib.github.io/pingr/
 BugReports: https://github.com/r-lib/pingr/issues
 Suggests:
     covr,
-    testthat
+    testthat (>= 3.0.0)
 Imports:
     processx,
     utils
@@ -19,3 +19,4 @@ RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
 Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
