--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,25 +2,24 @@ Package: pingr
 Title: Check if a Remote Computer is Up
 Version: 2.0.2.9000
 Authors@R: c(
-    person(given = "Gábor", family = "Csárdi", role = c("aut", "cre"), email = "csardi.gabor@gmail.com"),
+    person("Gábor", "Csárdi", , "csardi.gabor@gmail.com", role = c("aut", "cre")),
     person("Posit Software, PBC", role = c("cph", "fnd"))
-    )
-Description: Check if a remote computer is up. It can either
-    just call the system ping command, or check a specified
-    TCP port.
+  )
+Description: Check if a remote computer is up. It can either just call the
+    system ping command, or check a specified TCP port.
 License: MIT + file LICENSE
 URL: https://github.com/r-lib/pingr#readme, https://r-lib.github.io/pingr/
 BugReports: https://github.com/r-lib/pingr/issues
-Suggests:
-    covr,
-    testthat (>= 3.0.0)
+Depends: 
+    R (>= 3.6)
 Imports:
     processx,
     utils
-RoxygenNote: 7.2.3
-Roxygen: list(markdown = TRUE)
-Encoding: UTF-8
+Suggests:
+    covr,
+    testthat (>= 3.0.0)
 Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
-Depends: 
-    R (>= 3.6)
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
