GHA: install command line ping on Linux

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -57,6 +57,11 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
 
+      - name: Install command line ping on Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get install -y iputils-ping
+
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
