freebsd: debug shell + choose freebsd release
[ci skip]

--- a/.github/workflows/freebsd.yaml
+++ b/.github/workflows/freebsd.yaml
@@ -1,5 +1,18 @@
 on:
   workflow_dispatch:
+    inputs:
+      release:
+        description: 'FreeBSD release'
+        required: true
+        type: choice
+        options:
+        - '14.1'
+        - '14.0'
+        - '13.4'
+        - '13.3'
+        - '13.2'
+        - '12.4'
+        default: '14.1'
 
 name: freebsd.yaml
 
@@ -7,8 +20,11 @@ jobs:
   freebsd:
     runs-on: ubuntu-latest
     steps:
+      - uses: r-hub/actions/debug-shell@main
       - uses: actions/checkout@v4
       - uses: r-hub/actions/setup-r-freebsd@main
+        with:
+          release: ${{ github.event.inputs.release || '14.1' }}
 
       - name: Test R in FreeBSD VM
         run: |
