--- a/.github/workflows/openbsd.yaml
+++ b/.github/workflows/openbsd.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: r-hub/actions/setup-r-openbsd@main
+      - uses: r-hub/actions/setup-r-openbsd@v1
         with:
           release: ${{ github.event.inputs.release || '7.6' }}
 
@@ -32,14 +32,14 @@ jobs:
           Sys.getenv()
         shell: Rscript {0}
 
-      - uses: r-hub/actions/debug-shell@main
+      - uses: r-hub/actions/debug-shell@v1
 
       - name: Install system packages
         run: |
           pkg_add -I libbind
           cd /usr/local/lib && ln -s libbind/libbind.so* .
         shell: openbsd {0}
-        
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           pak-version: none
