--- a/.github/workflows/dragonflybsd.yaml
+++ b/.github/workflows/dragonflybsd.yaml
@@ -1,4 +1,7 @@
 on:
+  push:
+    branches: [main, master]
+  pull_request:
   workflow_dispatch:
     inputs:
       release:
@@ -16,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: r-hub/actions/setup-r-dragonflybsd@v1
+      - uses: r-hub/actions/setup-r-dragonflybsd@main
         with:
           release: ${{ github.event.inputs.release || '6.4.0' }}
 
