--- a/.github/workflows/dragonflybsd.yaml
+++ b/.github/workflows/dragonflybsd.yaml
@@ -41,7 +41,7 @@ jobs:
           install-pandoc: false
           install-quarto: false
           cache-version: dragonflybsd-1
-          extra-packages: any::rcmdcheck, r-lib/fs
+          extra-packages: any::rcmdcheck, r-lib/fs, r-lib/openssl
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
