--- a/.github/workflows/netbsd.yaml
+++ b/.github/workflows/netbsd.yaml
@@ -41,7 +41,7 @@ jobs:
           install-pandoc: false
           install-quarto: false
           cache-version: netbsd-1
-          extra-packages: any::rcmdcheck, r-lib/fs, r-lib/ps
+          extra-packages: any::rcmdcheck
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
