GHA musl: need to install compilers

--- a/.github/workflows/musl.yaml
+++ b/.github/workflows/musl.yaml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install compilers
+        run: |
+          apk add gcc musl-dev g++
+        shell: bash
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
