--- a/.github/workflows/musl.yaml
+++ b/.github/workflows/musl.yaml
@@ -17,7 +17,7 @@ permissions: read-all
 
 jobs:
   R-CMD-check:
-    name: Alpine 3.20
+    name: Alpine 3.19
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/r-hub/r-minimal/r-minimal:latest
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install compilers, system libs
         run: |
-          apk add gcc musl-dev g++ curl-dev
+          apk add gcc musl-dev g++ curl-dev linux-headers
         shell: bash
 
       - uses: r-lib/actions/setup-r-dependencies@v2
