GHA: simplify *BSD workflows
[ci skip]

--- a/.github/workflows/dragonflybsd.yaml
+++ b/.github/workflows/dragonflybsd.yaml
@@ -22,25 +22,13 @@ jobs:
       - uses: r-hub/actions/setup-r-dragonflybsd@main
         with:
           release: ${{ github.event.inputs.release || '6.4.0' }}
-
-      - uses: r-hub/actions/debug-shell@main
-
-      - name: Test R in DragonFlyBSD VM
-        run: |
-          getRversion()
-          R.version[["platform"]]
-          .libPaths()
-          .Library
-          find.package("pak")
-          Sys.getenv()
-        shell: Rscript {0}
+      - uses: r-hub/actions/platform-info@v1
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           pak-version: none
           install-pandoc: false
           install-quarto: false
-          cache-version: dragonflybsd-1
           extra-packages: |
             any::rcmdcheck
             jeroen/openssl
@@ -50,13 +38,6 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
-          upload-results: never
-          upload-snapshots: false
+          upload-snapshots: true
         env:
           NOT_CRAN: true
-
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: 'check-results'
-          path: check
