--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,14 @@ BugReports: https://github.com/r-lib/pingr/issues
 Depends: 
     R (>= 3.6)
 Imports:
+    ps,
     processx,
     utils
 Suggests:
     covr,
-    ps,
     testthat (>= 3.0.0)
+Remotes:
+    r-lib/ps
 Config/Needs/website: tidyverse/tidytemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
